--- a/Notes/templates/login.html
+++ b/Notes/templates/login.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notes - login</title>
-</head>
-<body>
-    <form method="POST">
+{% extends 'layout.html' %}
+{% block content %}
+    <form action="">
         {{form.hidden_tag()}}
         {{form.username.label}}
-        {{form.username}}
-        <br>
+        {{form.username(class_="username")}}
         {{form.password.label}}
-        {{form.password}}
-        <br>
-        {{form.submit}}
+        {{form.password(class_="password")}}
+        <div class="button-box">
+            {{form.submit(class_="submit-button button")}}
+        </div>
     </form>
-</body>
-</html>
+{% endblock content %}
